responsive for the index.html page

--- a/requirements/project/static/css/error.css
+++ b/requirements/project/static/css/error.css
@@ -79,7 +79,7 @@ header h1 a img {
 
 .btn-primary {
     background: #3b82f6 !important;
-    color: white !important;
+    color: rgb(0, 4, 12) !important;
     border: 1px solid #3b82f6 !important;
 }
 
